Подключение базы данных к проекту. Cоздание класса настройки, доработка графического интерфейса пользователя.

--- a/Morze.Shop.GUI_WPF_Application/Morze.Shop.GUI_WPF_Application.csproj
+++ b/Morze.Shop.GUI_WPF_Application/Morze.Shop.GUI_WPF_Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Morze.Shop.Db_context\Morze.Shop.Db_context.csproj" />
+  </ItemGroup>
+
 </Project>
